Version 0.0.3:
    * Fix crashes in Twitter authentication.
    * Properly honor the chosen port number if a static host and port are
      marked as preferred.
    * Don't automatically try to resolve all incoming playback logs. This
      speeds up importing sources a lot.
    * Faster painting of playlists with lots of unresolved tracks.
    * The tomahawk:// protocol handler works on Windows now.

Version 0.0.2:
    * Don't reconnect to Jabber if the settings dialog is closed successfully
      but the Jabber settings haven't changed.
    * Don't run a rescan of the local collection if the settings dialog is
      closed successfully but the path hasn't changed.
    * Don't attempt to connect to unavailable Twitter peers over and over.
    * Find Twitter peers if the peer's Got Tomahawk? tweet is not their latest
      tweet.
    * Got Tomahawk? tweets can now be sent directly to specific users or in
      private direct messages.
    * Display a helpful message when someone sends a normal instant message to
      the Tomahawk XMPP presence.
    * Incompatible change: Twitter SIP protocol has changed slightly. 0.0.1
      clients will not be able to talk to newer clients.
    * Hopefully fixed crashes during Twitter authentication.
    * Don't let long playlist or summary names force a large Tomahawk window.
    * Tomahawk now asks you to authorize new contacts.

Version 0.0.1:
    * First public release.